--- a/main.html
+++ b/main.html
@@ -5,6 +5,45 @@
 </head>
 <body>
     <!-- Write your code here -->
+	    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item first-slide">
+                <img src="https://via.placeholder.com/800x400?text=First+Slide" alt="First Slide">
+            </div>
+
+            <div class="item second-slide">
+                <img src="https://via.placeholder.com/800x400?text=Second+Slide" alt="Second Slide">
+            </div>
+
+            <div class="item third-slide active">
+                <img src="https://via.placeholder.com/800x400?text=Third+Slide" alt="Third Slide">
+            </div>
+
+            <div class="item fourth-slide">
+                <img src="https://via.placeholder.com/800x400?text=Fourth+Slide" alt="Fourth Slide">
+            </div>
+
+            <div class="item fifth-slide">
+                <img src="https://via.placeholder.com/800x400?text=Fifth+Slide" alt="Fifth Slide">
+            </div>
+        </div>
+
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
